[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apres-efz-phase"
version = "1.0.0"
description = "CW-MLPR and MDI: phase-coherence velocity estimators for the ApRES echo-free zone"
authors = [
    {name = "Matthew R. Siegfried"},
    {name = "Hannes Stählin", email = "hannes.staehlin@swissloop.ch"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "zarr",
    "h5py",
]

[tool.setuptools]
packages = ["apres"]

[tool.setuptools.package-dir]
apres = "src/apres"
